Simplify the addition of new character encodings